Table border-collapse: collapse prevents the left most element border appearing on scroll.
Table border-collapse: separate requires a complete re-work of table borders.

--- a/Assets/CSS/chart-style.css
+++ b/Assets/CSS/chart-style.css
@@ -14,16 +14,14 @@
     padding: 0;
     width: 80vw;
     overflow-x: auto;
-    /* Centre content horizontally */
-    display: flex;
-    display: -webkit-flex; /* Safari */
-    flex-direction: row;
-    justify-content: center;
+    overflow-y: auto;
 }
 
 .chart table {
-/*    table-layout: fixed; */
-    border-collapse: collapse;
+    /* table-layout: fixed; */
+    /*border-collapse: collapse; */
+    border-collapse: separate;
+    /* border: none; */
     border: 3px solid #aaa;
 /*    flex: 1; */
 }
@@ -34,47 +32,63 @@ figcaption {
     padding-bottom: 10px;
 }
 
+/* =================================================================================== */
+/* This section deals with sticky elements for table horizontal and vertical scrolling */
+/* =================================================================================== */
+
 /* Ensures the leftmost td elements are sticky on horizontal scroll */
 td:first-child {
-    /* background-color: black; */
-    /* background: #002b36; */
-/*    border: 3px solid #aaa; */
+    width: 500px;
     position: -webkit-sticky;
     position: sticky;
-    left: -2px;
+    left: 0;
     z-index: 2;
+    border-left: 3px solid #aaa;
+    border-right: 3px solid #aaa;
 }
 
 /* Locks horizontal header elements during vertical and horizontal scroll */
-thead th:first-child {
-    /* background: #002b36; */
-/*    border: 3px solid #aaa; */
+thead th {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    left: -3px;
+    left: 0;
+}
+
+/* Ensures the leftmost head element is in front for downward scroll */
+thead th:first-child {
     z-index: 3;
 }
 
+/* =================================================================================== */
+
+/* .chart .side-blank and .chart .side-heading located in the table head */
+.chart .side-blank {
+    background-color: black;
+}
+
 .chart .side-heading {
-    min-width: 300px;
+    background-color: black;
     /* height: 40px; */
     border-top: 1px solid #aaa;
     border-bottom: 1px solid #aaa;
-    border-left: 3px solid #aaa;
+/*    border-left: 3px solid #aaa;
+    border-right: 3px solid #aaa; */
     font-weight: bold;
-    border-right: 1px solid #aaa;
     padding-right: 10px;
     padding-left: 10px;
     text-align: left;
 }
 
+/* .chart .side-name located first in row in the table body */
 .chart .side-name {
+    background-color: black;
     height: 40px;
     border-top: 1px solid #aaa;
     border-bottom: 1px solid #aaa;
-    border-left: 3px solid #aaa;
-/*    border-right: 1px solid #aaa; */
+/*    border-left: 3px solid #aaa;
+    border-right: 3px solid #aaa; */
+    /*    border-right: 1px solid #aaa; */
     padding-right: 10px;
     padding-left: 10px;
 }
